<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtRed"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtColorHeight"
        android:background="@color/red"
        android:gravity="center_horizontal"
        android:text="@string/red"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/txtGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtGreen"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtColorHeight"
        android:background="@color/green"
        android:gravity="center_horizontal"
        android:text="@string/green"
        app:layout_constraintEnd_toStartOf="@id/txtBlue"
        app:layout_constraintStart_toEndOf="@+id/txtRed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBlue"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtColorHeight"
        android:background="@color/blue"
        android:gravity="center_horizontal"
        android:text="@string/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/txtYellow"
        app:layout_constraintStart_toEndOf="@id/txtGreen"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtYellow"
        android:layout_width="0dp"
        android:layout_height="@dimen/txtColorHeight"
        android:background="@color/yellow"
        android:gravity="center_horizontal"
        android:text="@string/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRowOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/txtRowPadding"
        android:text="@string/row_one"
        app:layout_constraintTop_toBottomOf="@id/txtRed" />

    <TextView
        android:id="@+id/txtRowTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/txtRowPadding"
        android:text="@string/row_two"
        app:layout_constraintTop_toBottomOf="@id/txtRowOne" />

    <TextView
        android:id="@+id/txtRowThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/txtRowPadding"
        android:text="@string/row_three"
        app:layout_constraintTop_toBottomOf="@id/txtRowTwo" />

    <TextView
        android:id="@+id/txtRowFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/txtRowPadding"
        android:text="@string/row_four"
        app:layout_constraintTop_toBottomOf="@id/txtRowThree" />


</androidx.constraintlayout.widget.ConstraintLayout>